Change title and contact img

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Apka Reactowa!</title>
+    <title>Contacts App</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
