--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Contacts App</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <h1 class="header">Contacts App</h1>
     <div id="app"></div>
 
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
